# natural_language_processing_for_professionals

./: Dockerfile  README.md  config.py  process_to_csv.py  pyproject.toml
data/: video_game_data_small_sample.csv
notebooks/: chapter_1_introduction.ipynb  chapter_2_history_and_development.ipynb  chapter_3_string_processing_in_python.ipynb  chapter_4_statistical_background_of_natural_language_processing.ipynb  chapter_5_word_embeddings_in_natural_language_processing.ipynb  chapter_6_evaluation_methods.ipynb  chapter_7_attention_and_transformers.ipynb  chapter_9_model_training.ipynb
src/attention_and_transformers/: attention_and_transformers.ipynb  attention_and_transformers.py
src/course_env_docker/: Dockerfile  base.Dockerfile  process_to_csv.py  pyproject.toml
src/fastapi_code/: main.py  requirements.txt
src/foundations_of_natural_language_processing/: attention_and_transformers.py  evaluation_methods.ipynb  evaluation_methods.py  feed_forward_and_convolutional_neural_networks.ipynb  feed_forward_and_convolutional_neural_networks.py  multihead_self_attention.py  positional_encoding.py  sentence_embeddings_in_natural_language_processing.ipynb  sentence_embeddings_in_natural_language_processing.py  word_embeddings_in_natural_language_processing.ipynb  word_embeddings_in_natural_language_processing.py  word_embeddings_in_natural_language_processing_colab.ipynb
src/introduction_to_natural_language_processing/: history_and_development.ipynb  history_and_development.py  statistical_background_of_natural_language_processing.ipynb  string_processing_in_python.ipynb  (+3 more)
(+19 files in other folders)
