[tool.poetry]
name = "course_env_docker"
version = "0.1.0"
description = ""
authors = ["joydeep bhattacharjee <joydeepubuntu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
matplotlib = "^3.4.2"
numpy = "1.19.3"
nltk = "^3.6.2"
seaborn = "^0.11.1"
sklearn = "^0.0"
gensim = "^4.0.1"
wordcloud = "^1.8.1"
textblob = "^0.15.3"
spacy = "^3.1.0"
textstat = "^0.7.1"
tqdm = "^4.61.2"
scikit-learn = "^1.1.2"
tensorflow = "^2.5.0"
tensorflow-hub = "^0.12.0"
torch = "^1.9.0"
nlpaug = "^1.1.4"
transformers = "^4.8.2"
imbalanced-learn = "^0.9.1"
wandb = "^0.13.2"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
